<resources>
    <string name="app_name">FirstBlood</string>
    <!--首页-->
    <string name="item_news">头条</string>
    <string name="item_joke">笑话</string>
    <string name="item_cardNo">身份证</string>
    <string name="item_robot">机器人</string>
    <!--新闻-->
    <string-array name="news_type">
        <item>头条</item>
        <item>社会</item>
        <item>国内</item>
        <item>国际</item>
        <item>娱乐</item>
        <item>体育</item>
        <item>军事</item>
        <item>科技</item>
        <item>财经</item>
        <item>时尚</item>
    </string-array>
    <string-array name="news_type_id">
        <item>top</item>
        <item>shehui</item>
        <item>guonei</item>
        <item>guoji</item>
        <item>yule</item>
        <item>tiyu</item>
        <item>junshi</item>
        <item>keji</item>
        <item>caijing</item>
        <item>shishang</item>
    </string-array>
    <!--身份证-->
    <array name="array_idCard">
        <item>身份证号查询</item>
        <item>泄漏查询</item>
        <item>挂失查询</item>
    </array>
    <string name="idCardNo">身份证号：</string>
    <string name="area">地区：</string>
    <string name="sex">性别：</string>
    <string name="birthday">出生日期：</string>
    <!--Common-->
    <string name="search">查询</string>
    <string name="searchResult">查询结果</string>
    <!--other-->
    <string name="loading">拼命加载中&#8230;</string>
    <string name="load_error">网络请求失败</string>
    <string name="data_empty">还没有任何数据，空空的</string>
    <string name="data_load">来一波</string>
    <string name="no_network">没网啊小伙，在山区耍猴吗？</string>
    <string name="set_network">设置网络</string>
    <string name="retry">点击重试</string>
</resources>
